@@ -40,7 +40,7 @@ jobs:
         python -m pip install --upgrade pip wheel
         python -m pip install codecov coverage flake8 pytest pytest-qt
         # install dependencies
-        pip install -e .
+        pip install -e .[GUI]
         # show installed packages
         pip freeze
     - name: Start application and print version
