@@ -22,7 +22,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         # install our patched version of pyqtgraph
-        pip install -e .
+        pip install -e .[GUI]
     - name: Build app
       working-directory: ./build-recipes
       run: |
