@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-        pip install -e .
+        pip install -e .[GUI]
     - name: Build and publish
       env:
         TWINE_USERNAME: ci_dcor
